fix(cart): resolve errors - frontend cart and backend cartservlet